--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Wesley W. Q.
-author: Wesley Wei Qian
-description: Computer Science Student & AI Enthusiast
+title: Charlotte A. Lindsay
+author: Charlotte Anne Lindsay
+description: Mathematics Student
 ---
